# ClubheadDB-anonymous

./: LICENSE  README.md  metadata.csv  pyproject.toml
scripts/: annotations.parquet  build.py  create_dataset.py  download_and_process.py  merge_labels.py
src/clubhead_db/: builder.py  data_processor.py  label_merger.py
src/clubhead_db/data/: metadata.csv  metadata.txt
