[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clubhead-db"
version = "1.0.0"
description = "Scripts to download and prepare the ClubheadDB dataset."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT License" }
authors = [
    { name = "Your Name", email = "sebastian.u.hoefler@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "pyarrow",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/sebastianhoefler/ClubheadDB" # Change this to your repo URL

# This section makes your main build script available as a single command.
[project.scripts]
clubhead-build = "build:main"


